--- a/styles/banner.css
+++ b/styles/banner.css
@@ -1,29 +1,47 @@
 #welcome-section{
-    height: 100vh;
-    text-align: center;
-    margin-bottom: 50px;
-    background-image: url("https://github.com/J-Guidry/images_repo/raw/master/web_images/skyline.jpg");
     background-repeat: no-repeat;
     background-size:cover;
     background-position:center;
-    font-weight: bold;
-    font-size: 1.4rem;
+    background-image:linear-gradient(
+        rgba(250, 250 ,250, .3), 
+        rgba(250, 250 ,250, .1)),
+        url("../images/pankaj-patel-1073203-unsplash.jpg");
+    color: white;
+    height: 100vh;
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
   }
-  
-  /* #welcome-section *{
-    color: ;
-  } */
   
   #welcome-section h1{
-    padding-top: 100px;
+    margin-top: 90px;
+    margin-bottom: 15px;
+    background: #222;
+    padding: 10px;
+    display: inline-block;
+    margin-left: 20%;
+    margin-right: 20%;
   }
+
+  #welcome-section p{
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-bottom: 15px;
+    background: #222;
+    padding: 10px;
+    display: inline-block;
+    font-size: 1.5rem;
+  }
+  
 
   @media(max-width: 700px){
     #welcome-section{
       height: 100vh;
     }
     #welcome-section h1{
-      padding-top: 200px;
+      margin-top: 200px;
     }
-  
+    #welcome-section p{
+        /* padding-top: 200px; */
+      }
   }
