--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,16 +1,32 @@
+  /* @media(max-width: 1440px){
+  .projects{
+    width: 80%;
+   }  
+  } */
+
 .projects-header{
     text-align: center;
     margin-bottom: 35px;
   }
+
+.projects-header h1{
+    font-weight: 800;
+    font-size: 2.0em;
+    margin-bottom: 10px;
+}
+
+.projects-header p{
+    font-size: 1.4rem;
+}
   
-  .projects{
+.projects{
     margin: 0 80px;
     display: grid;
     grid-template-columns:1fr 1fr 1fr;
     grid-gap: 5px;
     margin-bottom: 25px;
     /* position: relative; */
-  }
+}
 
 .project-title{
     padding: 15px 0;
@@ -29,26 +45,18 @@
     width: 100%;
   }
 
-  .info{
+  .project-info{
     border-top: 1px solid black;
     width: 100%;
   }
   
-  .info p {
+  .project-info p {
     margin-left: 20px;
+    font-size: 1.4rem;
   }
 
   @media(max-width: 700px){
     .projects{
       grid-template-columns: 1fr;
     }
-
   }
-
-  /* @media(max-width: 1440px){
-  .projects{
-    padding-left: 200px;
-    padding-right: 200px;
-    /* position: relative; */
-  /* }   */
-/* }  */
