--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
-@import "base.css";
-@import "navbar.css";
-@import "banner.css";
-@import "projects.css";
-@import "contact.css";
+@import "./base.css";
+@import "./navbar.css";
+@import "./banner.css";
+@import "./projects.css";
+@import "./contact.css";
