--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,9 +1,3 @@
-  /* @media(max-width: 1440px){
-  .projects{
-    width: 80%;
-   }  
-  } */
-
 .projects-header{
     text-align: center;
     margin-bottom: 35px;
@@ -20,18 +14,17 @@
 }
   
 .projects{
-    margin: 0 80px;
+    /* margin: 0 80px; */
     display: grid;
     grid-template-columns:1fr 1fr 1fr;
     grid-gap: 5px;
     margin-bottom: 25px;
-    /* position: relative; */
 }
 
 .project-title{
-    padding: 15px 0;
+    padding: 10px 0;
     border-bottom: 1px solid black;
-    font-size: 1.1em;
+    font-size: 1.2em;
     font-weight: 600;
   }
   
@@ -58,5 +51,21 @@
   @media(max-width: 700px){
     .projects{
       grid-template-columns: 1fr;
+      margin-left: 50px;
+      margin-right: 50px;
     }
   }
+
+  @media(min-width: 1400px)and (max-width: 2080px){
+    .projects{
+      margin-left: 250px;
+      margin-right: 250px;
+     }  
+    }
+
+  @media(min-width: 800px)and (max-width: 1400px){
+    .projects{
+      margin-left: 100px;
+      margin-right: 100px;
+      }  
+    }
