--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,6 +1,7 @@
 #contact-header{
-    margin-left: 25px;
+    text-align: center;
     margin-top: 100px;
+    font-size: 1.2rem;
   }
   
   #contact-places{
@@ -18,7 +19,7 @@
     width: 250px;
     margin: 0 auto;
     background: lightgrey;
-    padding: 30px;
+    padding: 25px;
     font-size: 1.2rem;
   }
 
@@ -46,4 +47,9 @@ input[type=email] {
   margin-top: 10px;
   font-size: 1.2rem;
   padding: 5px;
+}
+
+.hidden{
+  visibility: hidden;
+  display: none;
 }
