--- a/live/calculator/styles.css
+++ b/live/calculator/styles.css
@@ -6,11 +6,13 @@
 
 
 .container{
+    height: auto;
     width: 100%;
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
+    margin-top: 100px;
     border: lightblue ridge 1px;
     background: lightblue;
     padding-bottom: 15px;
