--- a/live/viewer/viewer.css
+++ b/live/viewer/viewer.css
@@ -2,19 +2,19 @@ body{
     background: #101211;
   }
   
-  h1 + a {
+  .text-center h1 + a {
     color: cyan;
   }
-  h1{
+  .text-center h1{
     padding: 1%;
       margin: 1% auto;
     color: #E6F2EC;
   }
   
-  a{
+  .text-center a{
     display: block;
   }
-  input {
+  .text-center input {
     margin: auto;
     position: relative;
     margin-top: 25px;
@@ -24,7 +24,7 @@ body{
     padding: 5px 0 5px 10px;
   }
   
-  button{
+  .text-center button{
     display: inline;
     border-radius: 20px;
     background: #d2f2a2;
@@ -42,7 +42,7 @@ body{
     padding: 20px;
   }
   
-  li a {
+  .text-center li a {
     color: blue;
     margin-bottom: 10px;
   }
@@ -53,5 +53,10 @@ body{
       width: 90%;
       border-radius: 10px;
       margin-top: 20px;
+      margin-bottom: 100px;
   }
-  
+
+  .container{
+    margin-top: 200px;
+  }
+
