--- a/styles/banner.css
+++ b/styles/banner.css
@@ -14,7 +14,7 @@
   }
   
   #welcome-section h1{
-    margin-top: 90px;
+    margin-top: 40px;
     margin-bottom: 15px;
     background: #222;
     padding: 10px;
@@ -32,13 +32,25 @@
     display: inline-block;
     font-size: 1.5rem;
   }
-  
+
+  #skills span{
+    margin-right: 10px;
+    margin-bottom: 10px;
+    /* margin-bottom: 15px; */
+    background: #222;
+    padding: 10px;
+    display: inline-block;
+    font-size: 1.5rem;
+  }
+  #skills{
+    display: block;
+  }
 
   @media(max-width: 700px){
     #welcome-section{
       height: 100vh;
     }
     #welcome-section h1{
-      margin-top: 200px;
+      margin-top: 70px;
     }
   }
