--- a/styles/footer.css
+++ b/styles/footer.css
@@ -6,13 +6,13 @@ footer{
     bottom: 0;
     left: 0;
     width: 100%;
-    padding: 1rem;
+    /* padding: 1rem; */
   }
   
   #contact-places{
     margin: 25px 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     font-size: 1.2em;
     color: lightgrey;
   }
