--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -1,3 +1,8 @@
+main{
+  margin-top: 120px;
+  margin-bottom: 150px;
+}
+
 .projects-header{
     text-align: center;
     margin-bottom: 35px;
@@ -46,6 +51,12 @@
   .project-info p {
     margin-left: 20px;
     font-size: 1.4rem;
+  }
+
+  @media(max-width: 350px){
+    main{
+      margin-top: 180px;
+    }
   }
 
   @media(max-width: 750px){
