--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -3,7 +3,7 @@
  }
 
 body{
-  background: #e5f5f5;
+  background-color: #e5f5f5;
   font-family: Helvetica, sans-serif;
   position: relative;
   margin: 0;
