--- a/src/live/viewer/viewer.css
+++ b/src/live/viewer/viewer.css
@@ -1,3 +1,6 @@
+@import "font-awesome/css/font-awesome.min.css";
+@import "bootstrap/dist/css/bootstrap.min.css";
+
 body{
     background: #101211;
   }
