--- a/src/live/calculator/styles.css
+++ b/src/live/calculator/styles.css
@@ -6,10 +6,13 @@
     padding: 0;
 }
 
+.main-calculator {
+  min-height: 90vh;
+}
 
 .container{
     height: auto;
-    width: 100%;
+    max-width: 45%;
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
@@ -21,33 +24,7 @@
     border-radius: 25px;
 }
   
-  @media (min-width: 576px) {
-    .container {
-      max-width: 540px;
-      border-radius: 25px;
-    }
-  }
-  
-  @media (min-width: 768px) {
-    .container {
-      max-width: 720px;
-      border-radius: 25px;
-    }
-  }
-  
-  @media (min-width: 992px) {
-    .container {
-      max-width: 960px;
-      border-radius: 25px;
-    }
-  }
-  
-  @media (min-width: 1200px) {
-    .container {
-      max-width: 1140px;
-      border-radius: 25px;
-    }
-  }
+
 
 .display{
     background: white;
@@ -111,4 +88,10 @@ h1{
     opacity: .5;
 }
 
+@media (max-width: 800px) {
+  .container {
+    max-width: 80%;
+    margin: 100px auto;
+  }
+}
 
