--- a/src/live/todolist/todo.css
+++ b/src/live/todolist/todo.css
@@ -1,22 +1,10 @@
 @import "font-awesome/css/font-awesome.min.css";
 @import "bootstrap/dist/css/bootstrap.min.css";
 
-@media(max-width: 650px){
-	.box h1{
-		font-size: 2.0rem;	
-	}
 
-	.box li{
-		font-size: 1.4rem;
-	}
 
-	.box div button{
-		font-size: 1.0rem;
-	}
-
-	.box input{
-		width: 180px;
-	}
+.main-todo-list {
+	min-height: 77vh;
 }
 
 html {
@@ -29,18 +17,19 @@ body{
 
 
 .box{
-	height: auto;
-	padding-bottom: 3%;
-	padding-left: 5%;
-	padding-right: 5%;
-	background: lightgray;
-	border-radius: 20px;
-	-webkit-box-shadow: 15px 31px 67px -9px rgba(0,0,0,0.37);
-	-moz-box-shadow: 15px 31px 67px -9px rgba(0,0,0,0.37);
-	box-shadow: 15px 31px 67px -9px rgba(0,0,0,0.37);
-	margin: 0 auto;
-	margin-top: 200px;
-	font-size: 2.7vw;
+    height: auto;
+    padding-bottom: 3%;
+    padding-left: 5%;
+    padding-right: 5%;
+    background: #d3d3d3;
+    border-radius: 20px;
+    -webkit-box-shadow: 15px 31px 67px -9px rgba(0,0,0,.37);
+    -moz-box-shadow: 15px 31px 67px -9px rgba(0,0,0,.37);
+    box-shadow: 15px 31px 67px -9px rgba(0,0,0,.37);
+    margin: 200px auto;
+    font-size: 1.8rem;
+	margin-bottom: 150px;
+	max-width: 35%;
 }
 
 .box {
@@ -51,7 +40,7 @@ body{
 	margin: 10px;
 	padding-top: 15px;
 	font-weight: bold;
-	font-size: 2.8rem;
+	font-size: 1.8rem;
 }
 
 .box li{
@@ -64,8 +53,8 @@ body{
     border: none;
     color: white;
     padding: 5px 10px;
-	text-align: center;
-	font-size: 1.5rem;
+	text-align: left;
+	font-size: 1.0rem;
     text-decoration: none;
     display: inline-block;
     border-radius: 12px;
@@ -74,12 +63,12 @@ body{
 }
 
 .box input{
-	width: 220px;
+	width: 85%;
 	height: 35px;
 	border-radius: 12px;
 	background: #EDF7FA;
 	margin-right: 5px;
-	font-size: 1.3rem;
+	border: none;
 }
 
 /* .box input[text]{
@@ -108,3 +97,18 @@ body{
 	text-decoration: line-through;
 }
 
+@media(max-width: 650px){
+
+	.box {
+		max-width: 80%;
+	}
+
+
+	.box li{
+		font-size: 1.4rem;
+	}
+
+	.box div button{
+		font-size: 1.0rem;
+	}
+}
