--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -7,10 +7,13 @@
         rgba(250, 250 ,250, .1)),
         url("../images/pankaj-patel-1073203-unsplash.jpg");
     color: white;
-    height: 100vh;
+    min-height: 100vh;
+    overflow: hidden;
+    position: relative;
+    padding-bottom: 100px;
     text-align: center;
     margin-top: 50px;
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
   }
   
   #welcome-section h1{
@@ -48,7 +51,7 @@
 
   @media(max-width: 700px){
     #welcome-section{
-      height: 100vh;
+      min-height: 100vh;
     }
     #welcome-section h1{
       margin-top: 70px;
