--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -2,17 +2,26 @@
   box-sizing: border-box;
  }
 
+*:before,
+*:after {
+ box-sizing: border-box;
+}
+
 body{
   background-color: #e5f5f5;
   font-family: Helvetica, sans-serif;
   position: relative;
   margin: 0;
-  height: 100%;
 }
 
-main{
-  min-height: 90vh;
+html {
+  height: 100%;
+  position: relative;
 }
+
+/* main{
+  min-height: 90vh;
+} */
 
 li{
   list-style-type: none;
