--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -1,11 +1,11 @@
-main{
+.main-projects {
   margin-top: 120px;
-  margin-bottom: 150px;
+
+  min-height: 100vh;
 }
 
 .projects-header{
     text-align: center;
-    margin-bottom: 35px;
   }
 
 .projects-header h1{
@@ -19,11 +19,10 @@ main{
 }
   
 .projects{
-    /* margin: 0 80px; */
+    padding-bottom: 150px;
     display: grid;
     grid-template-columns:1fr 1fr 1fr;
     grid-gap: 5px;
-    margin-bottom: 25px;
 }
 
 .project-title{
