--- a/src/live/todolist/todo.css
+++ b/src/live/todolist/todo.css
@@ -1,20 +1,16 @@
 @import "font-awesome/css/font-awesome.min.css";
-@import "bootstrap/dist/css/bootstrap.min.css";
-
-
 
 .main-todo-list {
-	min-height: 77vh;
+	min-height: 80vh;
+}
+
+body {
+	background-color: #e5f5f5;
 }
 
 html {
 	box-sizing: border-box;
 }
-
-body{
-	background-color: #e5f5f5;
-}
-
 
 .box{
     height: auto;
@@ -29,7 +25,7 @@ body{
     margin: 200px auto;
     font-size: 1.8rem;
 	margin-bottom: 150px;
-	max-width: 35%;
+	max-width: 65%;
 }
 
 .box {
@@ -45,6 +41,7 @@ body{
 
 .box li{
 	list-style: none;
+	margin-bottom: 10px;
 }
 
 
@@ -71,10 +68,6 @@ body{
 	border: none;
 }
 
-/* .box input[text]{
-	font-size: 1.3rem;
-} */
-
 .fa-times {
 	float: right;
 	color: darkred;
@@ -100,12 +93,13 @@ body{
 @media(max-width: 650px){
 
 	.box {
-		max-width: 80%;
+		max-width: 95%;
 	}
 
 
 	.box li{
 		font-size: 1.4rem;
+		margin-bottom:5px;
 	}
 
 	.box div button{
