--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -8,7 +8,7 @@
 }
 
 body{
-  background-color: #e5f5f5;
+  background-color: white;
   font-family: Helvetica, sans-serif;
   position: relative;
   margin: 0;
