--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -13,25 +13,29 @@
     font-size: 1.4em;
   }
 
-  #contact-me{
-    width: 250px;
-    margin: 0 auto;
-    padding-bottom: 150px;
-    background: lightgrey;
-    padding: 25px;
-    font-size: 1.2rem;
-    border-radius: 5px;
-  }
+#contact-me{
+  width: 250px;
+  margin: 0 auto;
+  padding-bottom: 150px;
+  background: lightgrey;
+  padding: 15px;
+  font-size: 1.2rem;
+  border-radius: 5px;
+}
 
-  form input {
-    margin-left: 10px;
-  }
+#contact-me h3 {
+  margin-top: 8px;
+}
 
-  input[type=text] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
+form input {
+  margin-left: 10px;
+}
+
+input[type=text] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
 }
 
 input[type=email] {
