--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,4 +2,5 @@
 @import "./_navbar.scss";
 @import "./_banner.scss";
 @import "./_contact.scss";
+@import './_footer.scss';
 @import "font-awesome/css/font-awesome.min.css";
