--- a/src/styles/writeups.css
+++ b/src/styles/writeups.css
@@ -1,5 +1,6 @@
 main {
-  min-height: 100vh;
+    min-height: 100vh;
+    padding-bottom: 100px;
 }
 
 .writeup{
@@ -7,12 +8,10 @@ main {
     padding: 20px;
     margin-right: auto;
     margin-left: auto;
-    border: lightblue ridge 1px;
     background: lightblue;
-    /* padding-bottom: 15px; */
     border-radius: 25px;
     font-size: 1.3rem;
-    /* margin-top: 150px; */
+    border: none;
 }
 
 .writeup-header{
