footer color changed. Minor change to introduction.

--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -72,3 +72,10 @@ input[type=email] {
   color: lightgrey;
 }
 
+// .fa-github::before, .fa-linkedin::before {
+//   color: #333333;
+// }
+
+.fa-github, .fa-linkedin {
+  color: #333333;
+}
