--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -31,4 +31,14 @@
     #navbar li {
       display: inline-block;
     }
+
+    #navbar {
+      height: 90px;
+    }
+  }
+
+  @media(max-width: 355px) {
+    #navbar {
+      height: 150px;
+    }
   }
