icon color error corrected

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -22,6 +22,9 @@ footer{
 
   footer a {
     text-decoration: none;
-    // color: #333333;
+  }
+
+  footer .fa-github, footer .fa-linkedin {
+    color: #333333;
   }
   
