--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -3,28 +3,27 @@
   padding-bottom: 100px;
 }
 
-#contact-header{
-    text-align: center;
-    margin-top: 100px;
-    font-size: 1.2rem;
-  }
-  
+#contact-header {
+  text-align: center;
+  margin-top: 100px;
+  font-size: 1.2rem;
+}
 
-  #contact-header p{
-    font-size: 1.4em;
-  }
+#contact-header p {
+  font-size: 1.4em;
+}
 
-#contact-me{
+#contact-me {
   width: 250px;
   margin: 0 auto;
   padding-bottom: 150px;
-  background: #FFFAFA;
+  background: #fffafa;
   padding: 20px;
   font-size: 1.2rem;
   border-radius: 5px;
-  -webkit-box-shadow: 1px 0px 16px -4px rgba(0,0,0,0.75);
-  -moz-box-shadow: 1px 0px 16px -4px rgba(0,0,0,0.75);
-  box-shadow: 1px 0px 16px -4px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 1px 0px 16px -4px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 1px 0px 16px -4px rgba(0, 0, 0, 0.75);
+  box-shadow: 1px 0px 16px -4px rgba(0, 0, 0, 0.75);
 }
 
 #contact-me h3 {
@@ -35,14 +34,14 @@ form input {
   margin-left: 10px;
 }
 
-input[type=text] {
+input[type="text"] {
   width: 100%;
   padding: 12px 10px;
   margin: 8px 0;
   box-sizing: border-box;
 }
 
-input[type=email] {
+input[type="email"] {
   width: 100%;
   padding: 12px 10px;
   margin: 8px 0;
@@ -53,7 +52,7 @@ input[type=email] {
   margin-top: 5px;
 }
 
-#submit{
+#submit {
   width: 70%;
   background: #e5f5f5;
   margin-top: 10px;
@@ -61,26 +60,12 @@ input[type=email] {
   padding: 5px;
 }
 
-.hidden{
+.hidden {
   visibility: hidden;
   display: none;
 }
 
-
-#contact-places{
-  padding: 25px 0;
-  display: flex;
-  justify-content: space-around;
-  font-size: 1.2em;
-  color: lightgrey;
-}
-
-#contact-places a:visited{
-  color: lightgrey;
-}
-
-
-@media(max-width: 355px) {
+@media (max-width: 355px) {
   .main-contact {
     margin-top: 200px;
   }
