--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,6 @@
 @import "./_base.scss";
 @import "./_navbar.scss";
+@import "./_services.scss";
 @import "./_contact.scss";
-@import './_footer.scss';
+@import "./_footer.scss";
 @import "font-awesome/css/font-awesome.min.css";
