--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1554,19 +1554,19 @@ input, select, textarea {
 	}
 
 	form ::-webkit-input-placeholder {
-		color: #555 !important;
+		color: #d3d3d3 !important;
 	}
 
 	form :-moz-placeholder {
-		color: #555 !important;
+		color: #d3d3d3 !important;
 	}
 
 	form ::-moz-placeholder {
-		color: #555 !important;
+		color: #d3d3d3 !important;
 	}
 
 	form :-ms-input-placeholder {
-		color: #555 !important;
+		color: #d3d3d3 !important;
 	}
 
 	form ::-moz-focus-inner {
@@ -1804,7 +1804,7 @@ input, select, textarea {
 					-webkit-transition: background-color .2s ease-in-out;
 					-ms-transition: background-color .2s ease-in-out;
 					transition: background-color .2s ease-in-out;
-					background-color: #444;
+					background-color: #d3d3d3;
 					border-radius: 6px;
 					box-shadow: inset 0px 0px 0px 1px #282828, inset 0px 2px 1px 0px rgba(255, 255, 255, 0.1);
 					color: #2E2E2E !important;
